--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 
 <body>
 <div class="breakpoint"></div>
+<img class="image-pos-mobile" src="img/11-cat-energy-index-mobile.jpg" alt="">
+<img class="image-pos-tablet" src="img/12-cat-energy-index-tablet.jpg" alt="">
+<img class="image-pos-desktop" src="img/13-cat-energy-index-desktop.jpg" alt="">
 
 <div class="content">
     <div class="content__warp">
@@ -95,8 +98,8 @@
         <div class="main-sect main-sect--ident">
             <div class="main-sect__block">
                 <div class="main-sect__label">
-                    <h2 class="main-sect__title main-sect__title--ident">Функциональное<br>питание для котов
-                    </h2>
+                    <h1 class="main-sect__title main-sect__title--ident">Функциональное<br>питание для котов
+                    </h1>
                     <h5 class="main-sect__description main-sect__description--ident">Занялся собой? Займись котом!</h5>
                 </div>
                 <div class="main-sect__picture--mobile main-sect__picture--mobile--ident">
