--- a/index.html
+++ b/index.html
@@ -66,55 +66,61 @@
 
 <body>
 <div class="breakpoint"></div>
+<img class="image-pos-mobile" src="img/11-cat-energy-index-mobile-open.jpg" alt="">
+<img class="image-pos-tablet" src="img/12-cat-energy-index-tablet.jpg" alt="">
+<img class="image-pos-desktop" src="img/13-cat-energy-index-desktop-dark.jpg" alt="">
 
 <div class="content">
     <div class="content__warp">
 
         <div class="top-nav">
             <div class="top-nav__block">
-                <div class="top-nav__logo">
+                <div class="top-nav__logo top-nav__logo--indent">
                     <img class="top-nav__logo-mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
                     <img class="top-nav__logo-mobile-text" src="img/logo-mobile-header.png" alt="CAT-ENERGY">
                     <img class="top-nav__logo-tablet" src="img/logo-tablet.png" alt="CAT-ENERGY">
                     <img class="top-nav__logo-desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
                 </div>
-                <div class="top-nav__links h4">
-                    <a href="#" class="top-nav__item" >
+                <div class="top-nav__links h4 top-nav__links--indent">
+                    <a href="#" class="top-nav__item top-nav__item--border-top">
                         Главная
                     </a>
-                    <a href="#" class="top-nav__item">
+                    <a href="#" class="top-nav__item top-nav__item--border-top">
                         Каталог продукции
                     </a>
-                    <a href="#" class="top-nav__item">
+                    <a href="#" class="top-nav__item top-nav__item--border-top">
                         Подбор программы
                     </a>
                 </div>
             </div>
         </div>
 
-        <div class="main-sect main-sect--ident">
+        <div class="main-sect main-sect--indent">
             <div class="main-sect__block">
                 <div class="main-sect__label">
-                    <h2 class="main-sect__title main-sect__title--ident">Функциональное<br>питание для котов
-                    </h2>
-                    <h5 class="main-sect__description main-sect__description--ident">Занялся собой? Займись котом!</h5>
+                    <h1 class="main-sect__title main-sect__title--indent">Функциональное<br>питание для котов
+                    </h1>
+                    <h5 class="main-sect__description main-sect__description--indent">Занялся собой? Займись котом!</h5>
                 </div>
-                <div class="main-sect__picture--mobile main-sect__picture--mobile--ident">
+                <div class="main-sect__picture--mobile">
                     <img src="img/index-cat-mobile.png" alt="">
                 </div>
                 <div class="main-sect__picture--tablet">
+                    <img src="img/index-can-tablet.png" alt="">
+                </div>
+                <div class="main-sect__picture--desktop">
                     <img src="img/index-cat-desktop.png" alt="">
                 </div>
-                <div class="btn btn-primary">Подобрать программу!</div>
+                <div class="main-sect__button btn btn-primary">Подобрать программу!</div>
             </div>
         </div>
 
-        <div class="choose">
+        <div class="choose choose--indent choose--temp-desktop">
             <div class="choose__block">
                 <div class="choose__element choose__element--indent">
                     <div class="choose__content">
                         <div class="choose__title choose__title--indent">
-                            <div class="choose__icon choose__icon--small choose__icon--invis-tab">
+                            <div class="choose__icon choose__icon--mobile choose__icon--desktop choose__icon--invis-on-tab">
                                 <svg class="svg">
                                     <use xlink:href="#icon-slim-cat"></use>
                                 </svg>
@@ -131,7 +137,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="choose__icon choose__icon--big choose__icon--vis-in-tab">
+                    <div class="choose__icon choose__icon--tablet choose__icon--vis-on-tab">
                         <svg class="svg">
                             <use xlink:href="#icon-slim-cat"></use>
                         </svg>
@@ -140,7 +146,7 @@
                 <div class="choose__element choose__element--indent">
                     <div class="choose__content">
                         <div class="choose__title choose__title--indent">
-                            <div class="choose__icon choose__icon--small choose__icon--invis-tab">
+                            <div class="choose__icon choose__icon--mobile choose__icon--desktop choose__icon--invis-on-tab">
                                 <svg class="svg">
                                     <use xlink:href="#icon-fat-cat"></use>
                                 </svg>
@@ -157,7 +163,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="choose__icon choose__icon--big choose__icon--vis-in-tab">
+                    <div class="choose__icon choose__icon--tablet choose__icon--vis-on-tab">
                         <svg class="svg">
                             <use xlink:href="#icon-fat-cat"></use>
                         </svg>
@@ -166,14 +172,14 @@
             </div>
         </div>
 
-        <div class="how">
-            <div class="how__block">
-                <h2 class="how__title how__title--ident">
+        <div class="how how--temp-margin">
+            <div class="how__block how__block--indent">
+                <h2 class="how__title how__title--indent">
                     Как это работает
                 </h2>
                 <div class="how__items">
-                    <div class="how__item how__item--ident">
-                        <div class="how__trafaret how__trafaret--ident">
+                    <div class="how__item how__item--indent">
+                        <div class="how__trafaret how__trafaret--indent">
                             <div class="how__icon">
                                 <div class="how__icon">
                                     <svg class="svg">
@@ -182,15 +188,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="how__text how__text--ident">
+                        <div class="how__text how__text--indent">
                             Функциональное питание содержит только полезные питательные вещества.
                         </div>
                         <div class="how__count">
                             1
                         </div>
                     </div>
-                    <div class="how__item how__item--ident">
-                        <div class="how__trafaret how__trafaret--ident">
+                    <div class="how__item how__item--indent">
+                        <div class="how__trafaret how__trafaret--indent">
                             <div class="how__icon">
                                 <div class="how__icon">
                                     <svg class="svg">
@@ -199,15 +205,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="how__text how__text--ident">
+                        <div class="how__text how__text--indent">
                             Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
                         </div>
                         <div class="how__count">
                             2
                         </div>
                     </div>
-                    <div class="how__item how__item--ident">
-                        <div class="how__trafaret how__trafaret--ident">
+                    <div class="how__item how__item--indent">
+                        <div class="how__trafaret how__trafaret--indent">
                             <div class="how__icon">
                                 <div class="how__icon">
                                     <svg class="svg">
@@ -216,22 +222,22 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="how__text how__text--ident">
+                        <div class="how__text how__text--indent">
                             Замените один-два приема обычной еды на наше функциональное питание.
                         </div>
                         <div class="how__count">
                             3
                         </div>
                     </div>
-                    <div class="how__item how__item--ident">
-                        <div class="how__trafaret how__trafaret--ident">
+                    <div class="how__item how__item--indent">
+                        <div class="how__trafaret how__trafaret--indent">
                             <div class="how__icon">
                                 <svg class="svg">
                                     <use xlink:href="#icon-clock"></use>
                                 </svg>
                             </div>
                         </div>
-                        <div class="how__text how__text--ident">
+                        <div class="how__text how__text--indent">
                             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
                         </div>
                         <div class="how__count">
@@ -242,48 +248,71 @@
             </div>
         </div>
 
-        <div class="example example--ident">
+        <div class="example example--indent example--push example--bg-grey">
             <div class="example__block">
                 <div class="example__content">
-                    <h2 class="example__title example__title--ident">Живой пример</h2>
-                    <div class="example__text example__text--ident">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </div>
-                    <h5 class="example__payed example__payed--ident">
-                        Затраты на питание:<br class="visible-on-tab"> 15 000 руб.
-                    </h5>
+                    <h2 class="example__title example__title--indent">Живой пример</h2>
+                    <div class="example__text example__text--indent">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </div>
+                    <div class="example__collapse">
+                        <div class="example__tabs example__tabs--indent">
+                            <div class="example__tab"><h3>5 кг</h3>
+                                <div class="example__dop-text">
+                                    снижение <br class="visible-only-mobile">
+                                    веса
+                                </div>
+                            </div>
+                            <div class="example__tab"><h3>60 дней</h3>
+                                <div class="example__dop-text">
+                                    затрачено<br class="visible-only-mobile">
+                                    времени
+                                </div>
+                            </div>
+                        </div>
+                        <h5 class="example__payed example__payed--indent">
+                            Затраты на питание:<br class="visible-on-tab"> 15 000 руб.
+                        </h5>
+                    </div>
                 </div>
-                <div class="example__pic visible-only-mobile">
-                    <img src="img/before-mobile.png" alt="">
-                    <div class="example__slider"></div>
+                <div class="example__warp example__warp--indent">
+                    <div class="example__pic visible-only-mobile example__pic--indent">
+                        <img src="img/before-mobile.png" alt="">
+<!--                        <div class="example__slider"></div>-->
+                    </div>
+                    <div class="example__pic visible-after-mobile example__pic--indent">
+                        <img src="img/before-desktop.png" alt="">
+                    </div>
+                    <div class="example__dop-block example__dop-block--indent">
+                        <h5 class="example__text">Было</h5>
+                        <div class="example__slider"></div>
+                        <h5 class="example__text">Стало</h5>
+                    </div>
                 </div>
-                <div class="example__pic visible-after-mobile">
-                    <img src="img/before-desktop.png" alt="">
-                </div>
-
             </div>
         </div>
 
         <div class="map">
-            <div class="map__block">
-                <div class="map__title">
+            <div class="map__block map__block--indent">
+                <h5 class="map__title">
                     приглашаем<br>
                     к сотрудничеству<br>
                     дилеров!
-                </div>
+                </h5>
                 <div class="map__address">
-                    ул. Большая Конюшенная, д. 19/8<br>
+                    ул. Большая<br>
+                    Конюшенная, д. 19/8<br> <br class="visible-after-mobile">
                     Санкт-Петербург
                 </div>
             </div>
             <div class="map__inner">
-                <iframe class="" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1581705835211!5m2!1sru!2sua" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                <iframe class="" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1581705835211!5m2!1sru!2sua" width="100%" height="365" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
         </div>
 
         <div class="footer footer--padding footer--bg-grey footer--back">
-            <div class="footer__block footer__block--ident">
+            <div class="footer__block footer__block--indent">
 
                 <div class="footer__item">
-                    <div class="footer-logo">
+                    <div class="footer-logo footer-logo--indent">
                         <img class="footer-logo__pic" src="img/footer-logo.png" alt="">
                     </div>
                 </div>
