--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
                     <div class="example__pic visible-after-mobile example__pic--indent">
                         <img src="img/before-desktop.png" alt="">
                     </div>
-                    <div class="example__dop-block example__dop-block--indent">
-                        <h5 class="example__text">Было</h5>
-                        <div class="example__slider"></div>
-                        <h5 class="example__text">Стало</h5>
+                    <div class="example__dop-block switcher example__dop-block--indent">
+                        <h5 class="switcher__text">Было</h5>
+                        <div class="switcher__slider"></div>
+                        <h5 class="switcher__text">Стало</h5>
                     </div>
                 </div>
             </div>
