--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 <div class="content">
     <div class="content__warp">
 
-        <div class="top-nav">
-            <div class="top-nav__block">
-                <div class="top-nav__logo">
-                    <img class="top-nav__logo-mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
-                    <img class="top-nav__logo-mobile-text" src="img/logo-mobile-header.png" alt="CAT-ENERGY">
-                    <img class="top-nav__logo-tablet" src="img/logo-tablet.png" alt="CAT-ENERGY">
-                    <img class="top-nav__logo-desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
+        <div class="header">
+            <div class="header__warp">
+                <div class="header__logo logo">
+                    <img class="logo__mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
+                    <img class="logo__mobile-text" src="img/logo-mobile-header.png" alt="CAT-ENERGY">
+                    <img class="logo__tablet" src="img/logo-tablet.png" alt="CAT-ENERGY">
+                    <img class="logo__desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
                 </div>
-                <div class="top-nav__links h4">
+                <div class="header__nav nav h4">
                     <a href="#" class="top-nav__item" >
                         Главная
                     </a>
@@ -108,6 +108,9 @@
                 <div class="btn btn-primary">Подобрать программу!</div>
             </div>
         </div>
+
+
+
 
         <div class="choose">
             <div class="choose__block">
