--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
 <div class="content">
     <div class="content__warp">
 
-        <div class="top-nav">
-            <div class="top-nav__block">
-                <div class="top-nav__logo top-nav__logo--indent">
-                    <img class="top-nav__logo-mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
-                    <img class="top-nav__logo-mobile-text" src="img/logo-mobile-header.png" alt="CAT-ENERGY">
-                    <img class="top-nav__logo-tablet" src="img/logo-tablet.png" alt="CAT-ENERGY">
-                    <img class="top-nav__logo-desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
+        <div class="header">
+            <div class="header__warp">
+                <div class="header__logo logo">
+                    <img class="logo__mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
+                    <img class="logo__mobile-text" src="img/logo-mobile-header.png" alt="CAT-ENERGY">
+                    <img class="logo__tablet" src="img/logo-tablet.png" alt="CAT-ENERGY">
+                    <img class="logo__desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
                 </div>
-                <div class="top-nav__links h4 top-nav__links--indent">
-                    <a href="#" class="top-nav__item top-nav__item--border-top">
+                <div class="header__nav nav h4">
+                    <a href="#" class="top-nav__item" >
                         Главная
                     </a>
-                    <a href="#" class="top-nav__item top-nav__item--border-top">
+                    <a href="#" class="top-nav__item">
                         Каталог продукции
                     </a>
-                    <a href="#" class="top-nav__item top-nav__item--border-top">
+                    <a href="#" class="top-nav__item">
                         Подбор программы
                     </a>
                 </div>
