master in fourth2

--- a/index.html
+++ b/index.html
@@ -92,20 +92,23 @@
             </div>
         </div>
 
-        <div class="main-sect main-sect--ident">
+        <div class="main-sect main-sect--indent">
             <div class="main-sect__block">
                 <div class="main-sect__label">
-                    <h2 class="main-sect__title main-sect__title--ident">Функциональное<br>питание для котов
-                    </h2>
-                    <h5 class="main-sect__description main-sect__description--ident">Занялся собой? Займись котом!</h5>
+                    <h1 class="main-sect__title main-sect__title--indent">Функциональное<br>питание для котов
+                    </h1>
+                    <h5 class="main-sect__description main-sect__description--indent">Занялся собой? Займись котом!</h5>
                 </div>
-                <div class="main-sect__picture--mobile main-sect__picture--mobile--ident">
+                <div class="main-sect__picture--mobile">
                     <img src="img/index-cat-mobile.png" alt="">
                 </div>
                 <div class="main-sect__picture--tablet">
+                    <img src="img/index-can-tablet.png" alt="">
+                </div>
+                <div class="main-sect__picture--desktop">
                     <img src="img/index-cat-desktop.png" alt="">
                 </div>
-                <div class="btn btn-primary">Подобрать программу!</div>
+                <div class="main-sect__button btn btn-primary">Подобрать программу!</div>
             </div>
         </div>
 
