--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 
 <body>
 <div class="breakpoint"></div>
+<div class="maket">
+    <img class="maket__pos maket__pos--mobile" src="img/11-cat-energy-index-mobile-open.jpg" alt="">
+<!--    <img class="maket__pos maket__pos&#45;&#45;tablet" src="img/12-cat-energy-index-tablet.jpg" alt="">-->
+<!--    <img class="maket__pos maket__pos&#45;&#45;desktop" src="img/13-cat-energy-index-desktop.jpg" alt="">-->
+</div>
 
 <div class="content">
     <div class="content__warp">
@@ -79,20 +84,20 @@
                     <img class="logo__desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
                 </div>
                 <div class="header__nav nav h4">
-                    <a href="#" class="top-nav__item" >
+                    <a href="#" class="nav__item">
                         Главная
                     </a>
-                    <a href="#" class="top-nav__item">
+                    <a href="#" class="nav__item">
                         Каталог продукции
                     </a>
-                    <a href="#" class="top-nav__item">
+                    <a href="#" class="nav__item">
                         Подбор программы
                     </a>
                 </div>
             </div>
         </div>
 
-        <div class="main-sect main-sect--indent">
+        <div class="header__main-sect main-sect header__main-sect--indent">
             <div class="main-sect__block">
                 <div class="main-sect__label">
                     <h1 class="main-sect__title main-sect__title--indent">Функциональное<br>питание для котов
@@ -289,8 +294,8 @@
             <div class="footer__block footer__block--ident">
 
                 <div class="footer__item">
-                    <div class="footer-logo">
-                        <img class="footer-logo__pic" src="img/footer-logo.png" alt="">
+                    <div class="footer__logo logo">
+                        <img class="logo__pic" src="img/footer-logo.png" alt="">
                     </div>
                 </div>
 
