master_начало переделки nav

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 <div class="breakpoint"></div>
 <div class="maket">
     <img class="maket__pos maket__pos--mobile" src="img/11-cat-energy-index-mobile-open.jpg" alt="">
-<!--    <img class="maket__pos maket__pos&#45;&#45;tablet" src="img/12-cat-energy-index-tablet.jpg" alt="">-->
-<!--    <img class="maket__pos maket__pos&#45;&#45;desktop" src="img/13-cat-energy-index-desktop.jpg" alt="">-->
+    <img class="maket__pos maket__pos--tablet" src="img/12-cat-energy-index-tablet.jpg" alt="">
+    <img class="maket__pos maket__pos--desktop" src="img/13-cat-energy-index-desktop.jpg" alt="">
 </div>
 
 <div class="content">
