Попытка посадить кота

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="content content--indent">
     <div class="content__warp">
 
-        <div class="header header--indent">
+        <div class="header header--indent header--bg-cat">
             <div class="header__warp header__warp--indent">
                 <div class="header__logo logo">
                     <img class="logo__mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
