--- a/index.html
+++ b/index.html
@@ -71,11 +71,14 @@
     <img class="maket__pos maket__pos--tablet" src="img/12-cat-energy-index-tablet.jpg" alt="">
     <img class="maket__pos maket__pos--desktop" src="img/13-cat-energy-index-desktop.jpg" alt="">
 <!--</div>-->
+<div class="zel-content zel-height">
+    <div class="zel-content__warp"></div>
+</div>
 
 <div class="content content--indent">
     <div class="content__warp">
 
-        <div class="header header--indent header--bg-cat">
+        <div class="dn header header--indent <!--header&#45;&#45;bg-cat-->">
             <div class="header__warp header__warp--indent">
                 <div class="header__logo logo">
                     <img class="logo__mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
@@ -113,6 +116,8 @@
                         <img src="img/index-cat-desktop.png" alt="">
                     </div>
                     <div class="main-sect__button btn btn-primary">Подобрать программу!</div>
+                </div>
+                <div class="main-sect__cat header--bg-cat">
                 </div>
             </div>
 
