adjskfln gbfs;zk

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
 
 <body>
 
+<!--<div class="maket">-->
+<img class="maket__pos maket__pos--mobile" src="img/11-cat-energy-index-mobile-open.jpg" alt="">
+<img class="maket__pos maket__pos--tablet" src="img/12-cat-energy-index-tablet.jpg" alt="">
+<img class="maket__pos maket__pos--desktop" src="img/13-cat-energy-index-desktop.jpg" alt="">
+<!--</div>-->
+
+
 <div class="header">
     <div class="header__warp">
 
