--- a/index.html
+++ b/index.html
@@ -76,27 +76,28 @@
     <div class="content__warp">
 
         <div class="header">
-            <div class="header__warp header__warp--indent">
-                <div class="header__logo logo">
-                    <img class="logo__mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
-                    <img class="logo__mobile-text" src="img/logo-mobile-header.png" alt="CAT-ENERGY">
-                    <img class="logo__tablet" src="img/logo-tablet.png" alt="CAT-ENERGY">
-                    <img class="logo__desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
-                </div>
-                <div class="header__nav nav h4">
-                    <a href="#" class="nav__item">
-                        Главная
-                    </a>
-                    <a href="#" class="nav__item">
-                        Каталог продукции
-                    </a>
-                    <a href="#" class="nav__item">
-                        Подбор программы
-                    </a>
-                </div>
-            </div>
 
             <div class="header__main-sect main-sect header__main-sect--indent">
+                <div class="header__warp header__warp--indent">
+                    <div class="header__logo logo">
+                        <img class="logo__mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
+                        <img class="logo__mobile-text" src="img/logo-mobile-header.png" alt="CAT-ENERGY">
+                        <img class="logo__tablet" src="img/logo-tablet.png" alt="CAT-ENERGY">
+                        <img class="logo__desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
+                    </div>
+                    <div class="header__nav nav h4">
+                        <a href="#" class="nav__item">
+                            Главная
+                        </a>
+                        <a href="#" class="nav__item">
+                            Каталог продукции
+                        </a>
+                        <a href="#" class="nav__item">
+                            Подбор программы
+                        </a>
+                    </div>
+                </div>
+
                 <div class="main-sect__block main-sect__block--indent">
                     <div class="main-sect__label main-sect__label--indent">
                         <h1 class="main-sect__title main-sect__title--indent">Функциональное<br>питание для котов
@@ -157,7 +158,7 @@
                             </div>
                             <h3 class="choose__label choose__label--indent">Набор массы</h3>
                         </div>
-                        <div class="choose__text choose__text--indent choose__text--border ">Заработать авторитет среди дворовых котов и даже собак? <br>Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</div>
+                        <div class="choose__text choose__text--indent choose__text--border ">Заработать авторитет среди дворовых котов и даже собак? <br class="visible-only-mobile">Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</div>
                         <a href="#" class="choose__press choose__press--indent">
                             <div class="choose__link">Каталог pro</div>
                             <div class="choose__pointer">
@@ -195,9 +196,6 @@
                         <div class="how__text how__text--indent">
                             Функциональное питание содержит только полезные питательные вещества.
                         </div>
-                        <div class="how__count">
-                            1
-                        </div>
                     </div>
                     <div class="how__item how__item--indent">
                         <div class="how__trafaret how__trafaret--indent">
@@ -211,9 +209,6 @@
                         </div>
                         <div class="how__text how__text--indent">
                             Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-                        </div>
-                        <div class="how__count">
-                            2
                         </div>
                     </div>
                     <div class="how__item how__item--indent">
@@ -229,9 +224,6 @@
                         <div class="how__text how__text--indent">
                             Замените один-два приема обычной еды на наше функциональное питание.
                         </div>
-                        <div class="how__count">
-                            3
-                        </div>
                     </div>
                     <div class="how__item how__item--indent">
                         <div class="how__trafaret how__trafaret--indent">
@@ -243,9 +235,6 @@
                         </div>
                         <div class="how__text how__text--indent">
                             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-                        </div>
-                        <div class="how__count">
-                            4
                         </div>
                     </div>
                 </div>
@@ -286,14 +275,16 @@
                     </div>
                     <div class="example__dop-block switcher example__dop-block--indent">
                         <h5 class="switcher__text">Было</h5>
-                        <div class="switcher__slider"></div>
+                        <div class="switcher__slider">
+                            <div class="switcher__pointer"></div>
+                        </div>
                         <h5 class="switcher__text">Стало</h5>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="map">
+        <div class="map map--push">
             <div class="map__block map__block--indent">
                 <div class="map__title">
                     приглашаем<br>
@@ -306,8 +297,8 @@
                     Санкт-Петербург
                 </div>
             </div>
-            <div class="map__inner">
-                <iframe class="" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1581705835211!5m2!1sru!2sua" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <div class="map__inner map__inner--indent">
+                <iframe class="" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1581705835211!5m2!1sru!2sua" width="100%" height="100%`" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
         </div>
 
@@ -320,7 +311,7 @@
                     </div>
                 </div>
 
-                <div class="footer__item footer__item--">
+                <div class="footer__item">
                     <div class="social">
                         <div class="social__tweeter icon">
                             <svg class="svg">
