--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <div class="catalog catalog--indent">
             <h2 class="catalog__title catalog__title--indent">Каталог продукции</h2>
-            <div class="catalog__items catalog__items--push catalog__items--in">
+            <div class="catalog__items catalog__items--push catalog__items--indent">
 
                 <div class="catalog__item catalog__item--indent">
                     <div class="element element--bg element--border element--indent">
