--- a/index.html
+++ b/index.html
@@ -61,11 +61,17 @@
         <symbol viewBox="0 0 490.668 490.668" id="icon-clock">
             <path d="M245.334,490.668c135.494,0,245.334-109.84,245.334-245.334C490.668,109.839,380.828,0,245.334,0C109.839,0,0,109.839,0,245.334C0,380.828,109.839,490.668,245.334,490.668z M96.543,414.141L76.53,394.124l46.13-46.13l20.013,20.016L96.543,414.141z M259.488,469.906h-28.309v-65.24h28.309V469.906z M469.906,231.18v28.309H404.67V231.18H469.906zM394.125,76.526l20.013,20.017l-46.13,46.13l-20.014-20.017L394.125,76.526z M368.008,347.991l46.13,46.131l-20.013,20.016l-46.131-46.13L368.008,347.991z M231.18,20.76h28.308v65.241H231.18V20.76z M205.978,187.991l42.114,40.774l76.896-75.54l19.838,20.196l-96.589,94.883l-61.946-59.978L205.978,187.991z M96.543,76.526l46.13,46.13l-20.013,20.017l-46.13-46.13L96.543,76.526z M85.999,231.18v28.309H20.76V231.18H85.999z"  fill="currentColor"/>
         </symbol>
+        <symbol viewBox="0 0 503.467 503.467" id="icon-gift">
+            <g>
+                <path d="M482.133,124.267H364.8c33.067-37.333,40.533-84.267,16-108.8c-9.6-9.6-22.4-14.933-37.333-14.933c-24.533,0-51.2,13.867-73.6,37.333c-7.467,7.467-13.867,16-18.133,24.533c-5.333-7.467-10.667-16-18.133-23.467C211.2,15.466,183.466,1.6,160,1.6c-14.933,0-27.733,5.333-37.333,13.867c-24.533,24.533-17.067,71.467,16,108.8H21.333C9.6,124.267,0,133.867,0,145.6v82.133c0,11.733,9.6,21.333,21.333,21.333h37.333V481.6c0,11.733,9.6,21.333,21.333,21.333h343.467c11.733,0,21.333-9.6,21.333-20.267v-233.6h36.267c11.733,0,21.333-9.6,22.4-20.267v-83.2C503.467,133.867,493.867,124.267,482.133,124.267z M154.667,45.333c1.067-2.133,4.267-2.133,6.4-2.133c8.533,0,25.6,6.4,42.667,23.467c22.4,24.533,25.6,49.067,20.267,55.467c-1.067,2.133-4.267,2.133-6.4,2.133c-8.533,0-25.6-6.4-42.667-23.467C152.533,76.267,149.333,51.733,154.667,45.333z M230.4,461.334H100.267V249.067H230.4V461.334zM230.4,207.467H42.667v-41.6H230.4V207.467z M301.867,66.667c16-17.067,33.067-23.467,42.667-23.467c2.133,0,5.333,0,6.4,2.133c6.4,6.4,2.133,32-20.267,55.467c-16,17.067-33.067,23.467-42.667,23.467c-2.133,0-5.333,0-6.4-2.133C275.2,115.734,279.467,90.133,301.867,66.667z M402.133,461.334H273.067V249.067h129.067V461.334z M273.067,207.467v-41.6h186.667v41.6H273.067z" fill="currentColor"/>
+            </g>
+        </symbol>
+
     </svg>
 </head>
 
 <body>
-<div class="breakpoint"></div>
+<div class="breakpoint1"></div>
 <!--<div class="maket">-->
     <img class="maket__pos maket__pos--mobile" src="img/21-cat-energy-catalog-mobile-open.jpg" alt="">
     <img class="maket__pos maket__pos--tablet" src="img/22-cat-energy-catalog-tablet.jpg" alt="">
@@ -102,7 +108,7 @@
 
         <div class="catalog catalog--indent">
             <h2 class="catalog__title catalog__title--indent">Каталог продукции</h2>
-            <div class="catalog__items catalog__items--push catalog__items--indent">
+            <div class="catalog__items catalog__items--indent">
 
                 <div class="catalog__item catalog__item--indent">
                     <div class="element element--bg element--border element--indent">
@@ -149,7 +155,7 @@
                 </div>
 
                 <div class="catalog__item catalog__item--indent">
-                    <div class="element element--bg element--indent">
+                    <div class="element element--bg element--border element--indent">
                         <div class="element__wrap">
                             <div class="element__picture element__picture--relative">
                                 <img src="img/catalog-3-small.png" alt="">
@@ -171,7 +177,7 @@
                 </div>
 
                 <div class="catalog__item catalog__item--indent">
-                    <div class="element element--bg element--indent">
+                    <div class="element element--bg element--border element--indent">
                         <div class="element__wrap">
                             <div class="element__picture element__picture--relative">
                                 <img src="img/catalog-4-small.png" alt="">
@@ -193,7 +199,7 @@
                 </div>
 
                 <div class="catalog__item catalog__item--indent">
-                    <div class="element element--bg element--indent">
+                    <div class="element element--bg element--border element--indent">
                         <div class="element__wrap">
                             <div class="element__picture element__picture--relative">
                                 <img src="img/catalog-5-small.png" alt="">
@@ -215,7 +221,7 @@
                 </div>
 
                 <div class="catalog__item catalog__item--indent">
-                    <div class="element element--bg element--indent">
+                    <div class="element element--bg element--border element--indent">
                         <div class="element__wrap">
                             <div class="element__picture element__picture--relative">
                                 <img src="img/catalog-6-small.png" alt="">
@@ -237,7 +243,7 @@
                 </div>
 
                 <div class="catalog__item catalog__item--indent">
-                    <div class="element element--bg element--indent">
+                    <div class="element element--bg element--border element--indent">
                         <div class="element__wrap">
                             <div class="element__picture element__picture--relative">
                                 <img src="img/catalog-7-small.png" alt="">
@@ -257,16 +263,91 @@
                         <div class="element__button btn btn-primary">заказатЬ</div>
                     </div>
                 </div>
+
+                <div class="catalog__item catalog__item--indent">
+                    <div class="element element--all-push element--border element--border-down element--all-indent">
+                        <div class="element__wrap element__wrap--all">
+                            <div class="element__picture element__picture--mob-all">
+                                <img src="img/plus-mobile.png" alt="">
+                            </div>
+                            <div class="element__picture element__picture--big-all">
+                                <img src="img/plus.png" alt="">
+                            </div>
+                            <div class="element__description element__description--indent">
+                                <div class="element__title element__title--all-indent">
+                                    Показать еще <br class="visible-after-mobile">100500 товаров
+                                </div>
+                                <div class="element__line element__line--all element__line--all-indent">На самом деле вкусов гораздо больше!</div>
+                            </div>
+                        </div>
+                        <div class="element__button btn btn-secondary">ПоказатЬ все</div>
+                    </div>
             </div>
+        </div>
         </div>
 
         <div class="additional">
-            <div class="additional__title">
-                Дополнительные товары
+            <div class="additional__warp">
+                <div class="additional__title additional__title--indent">
+                    Дополнительные товары
+                </div>
+                <div class="additional__desktop">
+                    <div class="additional__items">
+                        <div class="additional__item additional__item--bodred additional__item--indent">
+                            <div class="additional__tablet additional__tablet--indent">
+                                <div class="additional__item-name additional__item-name--indent">Сахарозаменитель</div>
+                                <div class="additional__params additional__params--indent">
+                                    <div class="additional__description additional__description--indent">1 упаковка (100 г)</div>
+                                    <div class="additional__price">200 Р.</div>
+                                </div>
+                            </div>
+                            <div class="additional__button btn btn-primary">ЗаказатЬ</div>
+                        </div>
+                        <div class="additional__item additional__item--bodred additional__item--indent">
+                            <div class="additional__tablet additional__tablet--indent">
+                                <div class="additional__item-name additional__item-name--indent">Питьевая вода</div>
+                                <div class="additional__params additional__params--indent">
+                                    <div class="additional__description additional__description--indent">5 литров</div>
+                                    <div class="additional__price">50 Р.</div>
+                                </div>
+                            </div>
+                            <div class="additional__button btn btn-primary">ЗаказатЬ</div>
+                        </div>
+                        <div class="additional__item additional__item--bodred additional__item--indent">
+                            <div class="additional__tablet additional__tablet--indent">
+                                <div class="additional__item-name additional__item-name--indent">Молоко</div>
+                                <div class="additional__params additional__params--indent">
+                                    <div class="additional__description additional__description--indent">1 литр</div>
+                                    <div class="additional__price">100 Р.</div>
+                                </div>
+                            </div>
+                            <div class="additional__button btn btn-primary">ЗаказатЬ</div>
+                        </div>
+                        <div class="additional__item additional__item--bodred additional__item--indent">
+                            <div class="additional__tablet additional__tablet--indent">
+                                <div class="additional__item-name additional__item-name--indent">Витамины</div>
+                                <div class="additional__params additional__params--indent">
+                                    <div class="additional__description additional__description--indent">1 упаковка (30 г)</div>
+                                    <div class="additional__price">300 Р.</div>
+                                </div>
+                            </div>
+                            <div class="additional__button btn btn-primary">ЗаказатЬ</div>
+                        </div>
+                    </div>
+                    <div class="additional__photo additional__photo--bg additional__photo--color additional__photo--indent">
+                        <div class="additional__gift">
+                            <svg class="svg">
+                                <use xlink:href="#icon-gift"></use>
+                            </svg>
+                        </div>
+                        <div class="additional__text additional__text--color">Закажите все<br>
+                            и получите чехол для <br>кота в подарок!</div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="zel-400"></div>
+        <div class="zel1"></div>
 
 
         <div class="map map--push">
@@ -327,7 +408,6 @@
             </div>
         </div>
 
-    </div>
 </div>
 
 </body>
