--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                         </div>
                     </div>
                     <div class="additional__photo additional__photo--bg additional__photo--color additional__photo--indent">
-                        <div class="additional__gift">
+                        <div class="additional__gift additional__gift--indent">
                             <svg class="svg">
                                 <use xlink:href="#icon-gift"></use>
                             </svg>
