--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <a href="#" class="nav__item">
                             Главная
                         </a>
-                        <a href="#" class="nav__item">
+                        <a href="#" class="nav__item active">
                             Каталог продукции
                         </a>
                         <a href="#" class="nav__item">
@@ -128,7 +128,7 @@
                                 <div class="element__line element__line--indent element__line--border">Цена <span>700 Р.</span></div>
                             </div>
                         </div>
-                        <div class="element__button btn btn-primary">заказатЬ</div>
+                        <div class="element__button btn btn-primary">Заказать</div>
                     </div>
                 </div>
 
@@ -150,7 +150,7 @@
                                 <div class="element__line element__line--indent element__line--border">Цена <span>1000 Р.</span></div>
                             </div>
                         </div>
-                        <div class="element__button btn btn-primary">заказатЬ</div>
+                        <div class="element__button btn btn-primary">Заказать</div>
                     </div>
                 </div>
 
@@ -172,7 +172,7 @@
                                 <div class="element__line element__line--indent element__line--border">Цена <span>700 Р.</span></div>
                             </div>
                         </div>
-                        <div class="element__button btn btn-primary">заказатЬ</div>
+                        <div class="element__button btn btn-primary">Заказать</div>
                     </div>
                 </div>
 
@@ -194,7 +194,7 @@
                                 <div class="element__line element__line--indent element__line--border">Цена <span>1000 Р.</span></div>
                             </div>
                         </div>
-                        <div class="element__button btn btn-primary">заказатЬ</div>
+                        <div class="element__button btn btn-primary">Заказать</div>
                     </div>
                 </div>
 
@@ -216,7 +216,7 @@
                                 <div class="element__line element__line--indent element__line--border">Цена <span>400 Р.</span></div>
                             </div>
                         </div>
-                        <div class="element__button btn btn-primary">заказатЬ</div>
+                        <div class="element__button btn btn-primary">Заказать</div>
                     </div>
                 </div>
 
@@ -238,7 +238,7 @@
                                 <div class="element__line element__line--indent element__line--border">Цена <span>700 Р.</span></div>
                             </div>
                         </div>
-                        <div class="element__button btn btn-primary">заказатЬ</div>
+                        <div class="element__button btn btn-primary">Заказать</div>
                     </div>
                 </div>
 
@@ -260,12 +260,12 @@
                                 <div class="element__line element__line--indent element__line--border">Цена <span>500 Р.</span></div>
                             </div>
                         </div>
-                        <div class="element__button btn btn-primary">заказатЬ</div>
+                        <div class="element__button btn btn-primary">Заказать</div>
                     </div>
                 </div>
 
                 <div class="catalog__item catalog__item--indent">
-                    <div class="element element--all-push element--border element--border-down element--all-indent">
+                    <div class="element element--all-push element--border element--border-all element--all-indent">
                         <div class="element__wrap element__wrap--all">
                             <div class="element__picture element__picture--mob-all">
                                 <img src="img/plus-mobile.png" alt="">
@@ -287,13 +287,13 @@
         </div>
 
         <div class="additional">
-            <div class="additional__warp">
-                <div class="additional__title additional__title--indent">
+            <div class="additional__warp additional__warp--indent">
+                <div class="additional__title additional__title--xx additional__title--indent">
                     Дополнительные товары
                 </div>
                 <div class="additional__desktop">
-                    <div class="additional__items">
-                        <div class="additional__item additional__item--bodred additional__item--indent">
+                    <div class="additional__items additional__items--indent">
+                        <div class="additional__item additional__item--border  additional__item---push additional__item--indent">
                             <div class="additional__tablet additional__tablet--indent">
                                 <div class="additional__item-name additional__item-name--indent">Сахарозаменитель</div>
                                 <div class="additional__params additional__params--indent">
@@ -301,9 +301,9 @@
                                     <div class="additional__price">200 Р.</div>
                                 </div>
                             </div>
-                            <div class="additional__button btn btn-primary">ЗаказатЬ</div>
+                            <div class="additional__button btn btn-primary">Заказать</div>
                         </div>
-                        <div class="additional__item additional__item--bodred additional__item--indent">
+                        <div class="additional__item additional__item--border  additional__item---push additional__item--indent">
                             <div class="additional__tablet additional__tablet--indent">
                                 <div class="additional__item-name additional__item-name--indent">Питьевая вода</div>
                                 <div class="additional__params additional__params--indent">
@@ -311,9 +311,9 @@
                                     <div class="additional__price">50 Р.</div>
                                 </div>
                             </div>
-                            <div class="additional__button btn btn-primary">ЗаказатЬ</div>
+                            <div class="additional__button btn btn-primary">Заказать</div>
                         </div>
-                        <div class="additional__item additional__item--bodred additional__item--indent">
+                        <div class="additional__item additional__item--border  additional__item---push additional__item--indent">
                             <div class="additional__tablet additional__tablet--indent">
                                 <div class="additional__item-name additional__item-name--indent">Молоко</div>
                                 <div class="additional__params additional__params--indent">
@@ -321,9 +321,9 @@
                                     <div class="additional__price">100 Р.</div>
                                 </div>
                             </div>
-                            <div class="additional__button btn btn-primary">ЗаказатЬ</div>
+                            <div class="additional__button btn btn-primary">Заказать</div>
                         </div>
-                        <div class="additional__item additional__item--bodred additional__item--indent">
+                        <div class="additional__item additional__item--border  additional__item---push additional__item--indent">
                             <div class="additional__tablet additional__tablet--indent">
                                 <div class="additional__item-name additional__item-name--indent">Витамины</div>
                                 <div class="additional__params additional__params--indent">
@@ -331,7 +331,7 @@
                                     <div class="additional__price">300 Р.</div>
                                 </div>
                             </div>
-                            <div class="additional__button btn btn-primary">ЗаказатЬ</div>
+                            <div class="additional__button btn btn-primary">Заказать</div>
                         </div>
                     </div>
                     <div class="additional__photo additional__photo--bg additional__photo--color additional__photo--indent">
@@ -340,7 +340,7 @@
                                 <use xlink:href="#icon-gift"></use>
                             </svg>
                         </div>
-                        <div class="additional__text additional__text--color">Закажите все<br>
+                        <div class="additional__text additional__text--color additional__text--indent">Закажите все<br>
                             и получите чехол для <br>кота в подарок!</div>
                     </div>
                 </div>
